<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:background="#000000">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".mediaDetails.MultimediaDetailsActivity"
        android:id="@+id/container">

    <FrameLayout
        android:id="@+id/topButtonsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="5dp"/>

        <ImageView
            android:id="@+id/movieCover"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="zoomImage"
            android:scaleType="fitXY"
            android:alpha="0.7" />

        <ImageView
            android:id="@+id/moviePoster"
            android:layout_width="150dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:foreground="@drawable/image_border"
            android:onClick="zoomImage"
            android:adjustViewBounds="true"
            android:scaleType="fitXY" />

        <ProgressBar
            android:id="@+id/ratingProgressBar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="@id/moviePoster"
            app:layout_constraintLeft_toLeftOf="@id/moviePoster"
            android:layout_marginTop="50dp"
            android:layout_marginStart="140dp"
            style="?android:attr/progressBarStyleHorizontal"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:background="@drawable/progressbar_background"
            android:progressDrawable="@drawable/fixed_circular_progress_bar"/>

        <TextView
            android:id="@+id/movieRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/ratingProgressBar"
            app:layout_constraintRight_toRightOf="@id/ratingProgressBar"
            app:layout_constraintLeft_toLeftOf="@id/ratingProgressBar"
            app:layout_constraintBottom_toBottomOf="@id/ratingProgressBar"
            tools:text="10.0"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF"/>

        <TextView
            android:id="@+id/voteCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/movieRating"
            app:layout_constraintRight_toRightOf="@id/movieRating"
            app:layout_constraintTop_toBottomOf="@id/movieRating"
            android:background="@drawable/edit_text_curved"
            android:backgroundTint="#FF000000"
            tools:text="70,000"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/moreInfoButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/moviePoster"
            android:background="@drawable/one_end_curved_button"
            android:src="@drawable/ic_info"
            android:scaleType= "fitCenter"
            android:padding="10dp"
            android:rotation="180"
            android:contentDescription="@string/show_more_info" />

        <ImageButton
            android:id="@+id/favoriteButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/moviePoster"
            android:background="@drawable/one_end_curved_button"
            android:src="@drawable/ic_favorite"
            android:scaleType= "fitCenter"
            android:padding="10dp"
            android:contentDescription="@string/add_to_favorites" />

        <ImageView
            android:id="@+id/checked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/favoriteButton"
            app:layout_constraintBottom_toTopOf="@id/favoriteButton"
            app:layout_constraintRight_toRightOf="@id/favoriteButton"
            app:layout_constraintLeft_toRightOf="@id/favoriteButton"
            android:src="@drawable/ic_check"/>

        <ImageView
            android:id="@+id/fullHeartImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:src="@drawable/ic_favorite"
            android:visibility="invisible"
            android:elevation="5dp"/>

        <ImageView
            android:id="@+id/leftBrokenHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:src="@drawable/ic_heartbreak_left"
            app:layout_constraintVertical_bias="0.3"
            android:visibility="invisible"
            android:elevation="5dp"/>
        <ImageView
            android:id="@+id/rightBrokenHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintVertical_bias="0.25"
            android:src="@drawable/ic_heartbreak_right"
            android:visibility="invisible"
            android:elevation="5dp"/>

        <TextView
            android:id="@+id/movieName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/moviePoster"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="20dp"
            tools:text="This Should Hold Movie Namexx"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textStyle="bold"/>

        <HorizontalScrollView
            android:id="@+id/genresScroller"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/movieName"
            app:layout_constraintLeft_toLeftOf="@id/movieName"
            app:layout_constraintRight_toRightOf="@id/movieName"
            android:layout_marginTop="10dp"
            android:scrollbars="none">
            <LinearLayout
                android:id="@+id/genresContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </HorizontalScrollView>
        <TextView
            android:id="@+id/overviewWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/overview"
            app:layout_constraintTop_toBottomOf="@id/genresScroller"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
            android:textColor="#A5A2A2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:elevation="2dp"/>

        <TextView
            android:id="@+id/movieOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/overviewWord"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:background="@drawable/overview_background"
            android:padding="15dp"
            android:layout_marginHorizontal="8dp"
            tools:text="This Should Hold Movie Overview" />

        <View
            android:id="@+id/separatorBelowOverview"
            app:layout_constraintTop_toBottomOf="@id/movieOverview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            app:layout_constraintWidth_percent="0.95"
            android:background="#FFFFFF"/>

        <TextView
            android:id="@+id/CastWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/separatorBelowOverview"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/cast_and_crew"
            android:textColor="#A5A2A2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:elevation="2dp"/>

        <FrameLayout
            android:id="@+id/creditsFragmentFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/CastWord"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/CastWord"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="15dp"/>

        <View
            android:id="@+id/separatorBelowCredits"
            app:layout_constraintTop_toBottomOf="@id/creditsFragmentFrame"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            app:layout_constraintWidth_percent="0.95"
            android:background="#FFFFFF"/>


        <TextView
            android:id="@+id/similarShowsWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/separatorBelowCredits"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/similar_shows"
            android:textColor="#A5A2A2"
            android:textStyle="bold"
            android:textSize="15sp"
            android:elevation="2dp"/>

        <FrameLayout
            android:id="@+id/similarShowsFragmentFrame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/similarShowsWord"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/similarShowsWord"
            app:layout_constraintWidth_percent="0.95"
            app:layout_constraintHorizontal_bias="0"
            android:layout_marginTop="15dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>